force-app/main/default/objects/MS_Pincode__c/MS_Pincode__c.object-meta.xml
<CustomObject>
    <label>MS Pincode</label>
    <nameField>
        <label>MS Pincode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MS Pincode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>