force-app/main/default/objects/MS_Pincode__c/fields/DistrictName__c.field-meta.xml
<CustomField>
    <fullName>DistrictName__c</fullName>
    <label>DistrictName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>