force-app/main/default/objects/MS_Pincode__c/fields/OfficeName_BO_SO_HO__c.field-meta.xml
<CustomField>
    <fullName>OfficeName_BO_SO_HO__c</fullName>
    <label>OfficeName (BO/SO/HO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>