force-app/main/default/objects/MS_Pincode__c/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <label>StateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>