force-app/main/default/objects/MS_Pincode__c/fields/Sub_distname__c.field-meta.xml
<CustomField>
    <fullName>Sub_distname__c</fullName>
    <label>Sub-distname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>