force-app/main/default/objects/MS_Pincode__c/fields/Village_Locality_Name__c.field-meta.xml
<CustomField>
    <fullName>Village_Locality_Name__c</fullName>
    <label>Village / Locality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>